Switch to Guzzle library

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	],
 	"require": {
 		"php": ">=7.1",
-		"rmccue/requests": ">=1.7"
+    "ext-json": "*",
+		"guzzlehttp/guzzle": "^6.3"
 	},
 	"require-dev": {
 		"php-coveralls/php-coveralls": "^2.1",
