--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,12 @@
 		"guzzlehttp/guzzle": "^6.3"
 	},
 	"require-dev": {
+		"mihaeu/test-generator": "^1.3",
 		"php-coveralls/php-coveralls": "^2.1",
 		"phpunit/php-code-coverage": "^6.1",
-		"phpunit/phpunit": "^7.0"
+    "phpunit/phpunit": "^7.0",
+    "phpdocumentor/phpdocumentor": "2.*",
+    "sebastian/phpcpd": "2.*"
 	},
 	"suggest": {
 		"ext-curl": "Faster HTTP requests"
