--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,7 @@
 		"mihaeu/test-generator": "^1.3",
 		"php-coveralls/php-coveralls": "^2.1",
 		"phpunit/php-code-coverage": "^6.1",
-    "phpunit/phpunit": "^7.0",
-    "phpdocumentor/phpdocumentor": "2.*",
-    "sebastian/phpcpd": "2.*"
+    "phpunit/phpunit": "^7.0"
 	},
 	"suggest": {
 		"ext-curl": "Faster HTTP requests"
