--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,7 +3,7 @@ pull_request_rules:
   # If there is at least one positive review and CI passed, merge
   - name: Automatic merge on CI success and review
     conditions:
-      - status-success=continuous-integration/travis-ci/pr
+      - status-success=Travis CI - Pull Request
       - "#approved-reviews-by>=1"
       - base=master
       - label!=WIP
@@ -23,7 +23,7 @@ pull_request_rules:
   - name: Automatic merge for Dependabot pull requests
     conditions:
       - author=dependabot[bot]
-      - status-success=continuous-integration/travis-ci/pr
+      - status-success=Travis CI - Pull Request
       - base=master
     actions:
       merge:
