--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ install:
 script:
   - mkdir -p build
   - vendor/bin/phpunit
-  - "phpunit --testsuite=unit --coverage-text --coverage-clover build/logs/clover.xml"
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls --coverage_clover build/cov.xml --json_path build/coverage.json
-  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build  -t clover --exit-code $TRAVIS_TEST_RESULT; fi
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then ./cc-test-reporter after-build --input-type clover --exit-code $TRAVIS_TEST_RESULT build/cov.xml; fi
