--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,13 @@
 * text=auto
 
 /tests export-ignore
+/examples export-ignore
+/resources export-ignore
+.github export-ignore
+.dependabot export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
+.mergify.yml  export-ignore
 phpunit.xml export-ignore
