--- a/.gitattributes
+++ b/.gitattributes
@@ -9,5 +9,6 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .travis.yml export-ignore
-.mergify.yml  export-ignore
+.mergify.yml export-ignore
+.codeclimate.yml export-ignore
 phpunit.xml export-ignore
