--- a/.mergify.yml
+++ b/.mergify.yml
@@ -22,7 +22,7 @@ pull_request_rules:
   # Automatically merge Dependabot Pull Requests
   - name: Automatic merge for Dependabot pull requests
     conditions:
-      - author=dependabot[bot]
+      - author=dependabot-prview[bot]
       - status-success=Travis CI - Pull Request
       - base=master
     actions:
