--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,12 +1,11 @@
 pull_request_rules:
 
-  # If there is at least one positive review and CI passed, merge
-  - name: Automatic merge on CI success and review
+  # Automatically merge Dependabot Pull Requests
+  - name: Automatic merge for Dependabot
     conditions:
+      - author=dependabot-prview[bot]
       - status-success=Travis CI - Pull Request
-      - "#approved-reviews-by>=1"
       - base=master
-      - label!=WIP
     actions:
       merge:
         method: squash
@@ -18,17 +17,6 @@ pull_request_rules:
       - merged
     actions:
       delete_head_branch: {}
-
-  # Automatically merge Dependabot Pull Requests
-  - name: Automatic merge for Dependabot pull requests
-    conditions:
-      - author=dependabot-prview[bot]
-      - status-success=Travis CI - Pull Request
-      - base=master
-    actions:
-      merge:
-        method: squash
-        strict: smart
 
   # Remove outdated reviews
   - name: Remove outdated reviews
