--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
 	"require": {
 		"php": ">=7.1.3",
     "ext-json": "*",
-		"guzzlehttp/guzzle": "^6.3"
+		"guzzlehttp/guzzle": "^7.2"
 	},
 	"require-dev": {
-		"mihaeu/test-generator": "^1.3",
-		"php-coveralls/php-coveralls": "^2.1",
-		"phpunit/php-code-coverage": "^6.1",
-    "phpunit/phpunit": "^7.0"
+    "nikic/php-parser": "^4.10",
+		"php-coveralls/php-coveralls": "^2.4",
+		"phpunit/php-code-coverage": "^9.2",
+    "phpunit/phpunit": "^9.4"
 	},
 	"suggest": {
 		"ext-curl": "Faster HTTP requests"
