--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ env:
     # This is a write-only ID that can only post test reports.
     - CC_TEST_REPORTER_ID=7d37e7331b1457f8c3a1857f8bd93a33c720f54dfd8bae66fa2a0fed468a3118
     - GIT_COMMITTED_AT=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then git log -1 --pretty=format:%ct; else git log -1 --skip 1 --pretty=format:%ct; fi)
+    - XDEBUG_MODE=coverage
 
 install:
   - curl -s http://getcomposer.org/installer | php
